kubernetes/torrent/sonarr/middleware.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: sablier-sonarr
  namespace: torrent
spec:
  plugin:
    sablier:
      group: jellyfin
      # blocking:
      #   defaultTimeout: 10s
      dynamic:
        displayName: Sonarr
        refreshFrequency: 5s
        showDetails: "true"
        theme: shuffle
      sablierUrl: http://sablier:10000
      sessionDuration: 30m
